--- a/index.html
+++ b/index.html
@@ -84,27 +84,27 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
+            <div data-date="June 2020 – September 2020">
                 <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+                <h4>AWS re/Start Trainee</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Completing a full-time remote training program on the AWS Cloud. Learning how to apply core AWS services in the area of computing, storage, and networking, including EC2, S3, IAM, VPC, Lamda, Cloud Formation, RDS, and Route 53. Building core IT skills, including carrying out operations on Linux and Linux distributions, writing scripts, and debugging in Python, also understanding networking and security to a competent degree.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="May 2019 – April 2020">
+                <h3>Eidgah Academy</h3>
+                <h4>Tutor</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Educated youth up to the age of 16 in studies and creative activities ensuring a fun and safe learning environment both inside and outside the establishment. Prepared and documented periodic progress reports. Coordinated and provided football training every week. Prepared and delivered engaging lesson plans
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="October 2016 – February 2017">
+                <h3>Vindaloo Tamworth</h3>
+                <h4>Receptionist</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Played a vital role in promotional campaigns delivering the highest standard of customer service. Worked with the chefs to invent a load system for delivery drivers saving up to 1 hour of loading time a week. Created an incentive program with the manager increasing customer traffic by 35%. Assisted customers with making menu choices in an informative and helpful fashion. Managed all phone calls and solving customer service issues on the phone and in-person. Trained new employees.
                 </p>
             </div>
         </div>
@@ -186,32 +186,10 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
+    
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>AWS</li>
+            <li>Linux</li>
         </ul>
     </div>
     <!-- End #skills -->
