--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
             <div data-date="June 2020 – September 2020">
-                <h3>Employer Name</h3>
+                <h3>Generation UK</h3>
                 <h4>AWS re/Start Trainee</h4>
                 <p>
                     Completing a full-time remote training program on the AWS Cloud. Learning how to apply core AWS services in the area of computing, storage, and networking, including EC2, S3, IAM, VPC, Lamda, Cloud Formation, RDS, and Route 53. Building core IT skills, including carrying out operations on Linux and Linux distributions, writing scripts, and debugging in Python, also understanding networking and security to a competent degree.
