About me update

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Me, the website.
+                        Hi, I'm Shohid. I am a graduate of the AWS re/Start programme working towards a cloud practitioner certificate. I think of myself as an inquisitive person and enjoy learning how things work. 
 		    </p>
                 </div>
             </div>
