Index and style sheet update

--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/snake.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3></h3>
+                        <h3>Python Misc</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            This repository contains different programs I designed for set tasks or for fun.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/Mshohid/Python-Misc">View Repository</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -145,15 +145,15 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/project.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>My Personal Website</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            I forked a template from Ryan Fitzgerald on github and made changes to the index.html file, the scss style sheet, and images to accommodate my taste :) 
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/Mshohid/MShohidurRahman.io">This Websites Files</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
