--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/snake.png" />
+                    <img src="images/snake.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -145,7 +145,8 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        
+                    <img src="images/project.png" />
+                    </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>My Personal Website</h3>
