--- a/index.html
+++ b/index.html
@@ -143,11 +143,7 @@
                 </div>
                 <!-- End .project -->
 
-                <div class="project shadow-large">
-                    <div class="project-image">
-                    <img src="images/project.png" />
-                    </div>
-                    <!-- End .project-image -->
+                <div class="project no-image">
                     <div class="project-info">
                         <h3>My Personal Website</h3>
                         <p>
