--- a/index.html
+++ b/index.html
@@ -166,20 +166,16 @@
             <li>Python</li>
             <li>AWS</li>
             <li>Linux</li>
+            <li>Security</li>
+            <li>Networking</li>
+
         </ul>
     </div>
     <!-- End #skills -->
 
     <div id="contact">
-        <h2>Get in Touch</h2>
-        <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Your message" required></textarea>
-                <button type="submit">Send</button>
-            </form>
-        </div>
+        <h2>Get In Touch With Me At Shohid159@hotmail.com</h2>
+    
         <!-- End #contact-form -->
     </div>
     <!-- End #contact -->
@@ -189,7 +185,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2020 YOUR NAME
+                        Copyright &copy; 2020 MSR
                     </p>
                 </div>
                 <div class="col-sm-2 top">
