--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="col-md-8">
                     <p>
                         Hi, I'm Shohid. I am a graduate of the AWS re/Start programme working towards a cloud practitioner certificate. I think of myself as an inquisitive person and enjoy learning how things work. 
-		    </p>
+		           </p>
                 </div>
             </div>
         </div>
@@ -88,24 +88,31 @@
                 <h3>Generation UK</h3>
                 <h4>AWS re/Start Trainee</h4>
                 <p>
-                    Completing a full-time remote training program on the AWS Cloud. Learning how to apply core AWS services in the area of computing, storage, and networking, including EC2, S3, IAM, VPC, Lamda, Cloud Formation, RDS, and Route 53. Building core IT skills, including carrying out operations on Linux and Linux distributions, writing scripts, and debugging in Python, also understanding networking and security to a competent degree.
+                    Completing a full-time remote training program on the AWS CloudLearning how to apply core AWS services in the area of computing, storage, and networking, including EC2, S3, IAM, VPC, Lamda, Cloud Formation, RDS, and Route 53
+                </p>
+                <p>
+                    Building core IT skills, including carrying out operations on Linux and Linux distributions, writing scripts, and debugging in Python, also understanding networking and security to a competent degree.
                 </p>
             </div>
 
             <div data-date="May 2019 – April 2020">
                 <h3>Eidgah Academy</h3>
                 <h4>Tutor</h4>
-                <p>
-                    Educated youth up to the age of 16 in studies and creative activities ensuring a fun and safe learning environment both inside and outside the establishment. Prepared and documented periodic progress reports. Coordinated and provided football training every week. Prepared and delivered engaging lesson plans
-                </p>
+                <p> Educated youth up to the age of 16 in studies and creative activities ensuring a fun and safe learning environment both inside and outside the establishment.</p>
+                    <p>Prepared and documented periodic progress reports.</p>  
+                    <p>Coordinated and provided football training every week.</p>
+                    <p>Prepared and delivered engaging lesson plans</p>
             </div>
 
             <div data-date="October 2016 – February 2017">
                 <h3>Vindaloo Tamworth</h3>
                 <h4>Receptionist</h4>
-                <p>
-                    Played a vital role in promotional campaigns delivering the highest standard of customer service. Worked with the chefs to invent a load system for delivery drivers saving up to 1 hour of loading time a week. Created an incentive program with the manager increasing customer traffic by 35%. Assisted customers with making menu choices in an informative and helpful fashion. Managed all phone calls and solving customer service issues on the phone and in-person. Trained new employees.
-                </p>
+                <p>Played a vital role in promotional campaigns delivering the highest standard of customer service.</p>
+                <p>Worked with the chefs to invent a load system for delivery drivers saving up to 1 hour of loading time a week.</p>
+                <p>Created an incentive program with the manager increasing customer traffic by 35%.</p>
+                <p>Assisted customers with making menu choices in an informative and helpful fashion.</p>
+                <p>Managed all phone calls and solving customer service issues on the phone and in-person.</p>
+                <p>Trained new employees.</p>
             </div>
         </div>
     </div>
