--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a href="https://github.com/Mshohid/" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/m-shohidur-rahman-8a4a0a149/" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/m-shohidur-rahman-8a4a0a149/" target="_blank"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
             </li>       
         </div>
         <!-- End #lead-content -->
