--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <h1>Mohammed Shohidur Rahman</h1>
             <h2>Cloud Engineer</h2>
             <li> 
-                <a href="https://github.com/Mshohid/" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a>
+                <a href="https://github.com/Mshohid/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/m-shohidur-rahman-8a4a0a149/" target="_blank"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/m-shohidur-rahman-8a4a0a149/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
             </li>       
         </div>
         <!-- End #lead-content -->
