--- a/index.html
+++ b/index.html
@@ -153,7 +153,24 @@
                     </div>
                     <!-- End .project-info -->
                 </div>
+
                 <!-- End .project -->
+
+                <div class="project-shadow-large">
+                  <div class="project image">
+                  <img src="wild.png"/>
+                  </div>
+                  <!--End .project-image-->
+                    <div class="project-info">
+                        <h3>Wild Rydes Serverless Workshop</h3>
+                        <p>
+                           As part of a workshop hosted by AWS I built a static webpage with Amazon S3 and used Amazon Cognito to manage users and authentication.I built a RESTful API for backend processing using Amazon API Gateway, AWS Lambda and Amazon DynamoDB.
+                            Also I used AWS CodeCommit, AWS CodeBuild and AWS CodePipeline to build a continuous delivery pipeline, following instructions. 
+                        </p>
+                        <a href="https://github.com/aws-samples/aws-serverless-workshops">The repository the instructions are in</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
 
                 <div class="project no-image">
                     <div class="project-info">
