Contact changes and Repo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
                 <a href="#skills">Skills</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="https://github.com/Mshohid/">GitHub</a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/m-shohidur-rahman-8a4a0a149/">LinkedIn</a>
             </li>
         </ul>
     </header>
@@ -49,13 +52,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Mohammed Shohidur Rahman</h1>
-            <h2>Cloud Engineer</h2>
-            <li> 
-                <a href="https://github.com/Mshohid/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/m-shohidur-rahman-8a4a0a149/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-            </li>       
+            <h2>Cloud Engineer</h2> 
         </div>
         <!-- End #lead-content -->
 
@@ -156,18 +153,17 @@
 
                 <!-- End .project -->
 
-                <div class="project-shadow-large">
-                  <div class="project image">
-                  <img src="wild.png"/>
+                <div class="project shadow-large">
+                  <div class="project-image">
+                  <img src="images/wild.png"/>
                   </div>
                   <!--End .project-image-->
                     <div class="project-info">
-                        <h3>Wild Rydes Serverless Workshop</h3>
+                        <h3>Wild Rydes Serverless Web Application</h3>
                         <p>
-                           As part of a workshop hosted by AWS I built a static webpage with Amazon S3 and used Amazon Cognito to manage users and authentication.I built a RESTful API for backend processing using Amazon API Gateway, AWS Lambda and Amazon DynamoDB.
-                            Also I used AWS CodeCommit, AWS CodeBuild and AWS CodePipeline to build a continuous delivery pipeline, following instructions. 
+                           As part of a workshop hosted by AWS, following a tutorial I built a static webpage with Amazon S3 and used Amazon Cognito to manage users and authentication. I also built a RESTful API for backend processing using Amazon API Gateway, AWS Lambda and Amazon DynamoDB.
                         </p>
-                        <a href="https://github.com/aws-samples/aws-serverless-workshops">The repository the instructions are in</a>
+                        <a href="https://github.com/aws-samples/aws-serverless-workshops">The Repository The Instructions Are In</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -212,9 +208,9 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2020 MSR, Template By Ryan Fitzgerald https://github.com/RyanFitzgerald/devportfolio
+                        Copyright &copy; 2020 MSR, except <a href="https://github.com/RyanFitzgerald/devportfolio" target="_blank">devportfolio</a> template by <a href="https://github.com/RyanFitzgerald" target="_blank">RyanFitzgerald</a> (licensed under MIT License)
                     </p>
-                </div>
+              </div>
                 <div class="col-sm-2 top">
                     <span id="to-top">
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
