--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 <a href="#skills">Skills</a>
             </li>
             <li>
-                <a href="https://github.com/Mshohid/"target="_blank">GitHub</a>
+                <a href="https://github.com/Mshohid/" class="no-scroll">GitHub</a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/m-shohidur-rahman-8a4a0a149/"target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/m-shohidur-rahman-8a4a0a149/" class="no-scroll">LinkedIn</a>
             </li>
         </ul>
     </header>
