--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
                 <div class="col-md-8">
                     <p>
                         Hi, I'm Shohid. I am a graduate of the AWS re/Start programme working towards a cloud practitioner certificate. I think of myself as an inquisitive person and enjoy learning how things work. 
-		           </p>
+                    </p>
+                    <p>
+                         I am currently keen on expanding my skills as a cloud engineer and developing my career by working towards further AWS certificates and an RHCSA certificate.
+                    </p>
                 </div>
             </div>
         </div>
@@ -126,9 +129,19 @@
             <h3>Generation UK & Ireland</h3>
             <span class="education-date">June 2020 - September 2020</span>
             <h4>AWS re/Start Programme</h4>
-            
         </div>
+
         <!-- End .education-block -->
+     
+           <div class="education-block">
+             <h3> JIB </h3>
+             <span class="education-date">September 2011 - June 2016</span>
+             <h4>
+                 <p>GCSE Grades:</p>
+                 <p> ICT - A* | RE - A* | Citizenship - A | Core Science - A | Additional Science - A | Urdu - A | Maths - B | English - B  Arabic - C </p>    
+             </h4>
+           </div>    
+        </div>
     </div>
     <!-- End #education -->
 
