--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <div class="project-info">
                         <h3>Wild Rydes Serverless Web Application</h3>
                         <p>
-                           As part of a workshop hosted by AWS, following a tutorial I built a static webpage with Amazon S3 and used Amazon Cognito to manage users and authentication. I also built a RESTful API for backend processing using Amazon API Gateway, AWS Lambda and Amazon DynamoDB.
+                           As part of a workshop hosted by AWS, following a tutorial I built a static webpage on Amazon S3 with AWS Amplify. I also used Amazon Cognito to manage users and authentication. Additionally I built a RESTful API for backend processing using Amazon API Gateway, AWS Lambda and Amazon DynamoDB.
                         </p>
                         <a href="https://github.com/aws-samples/aws-serverless-workshops">The Repository The Instructions Are In</a>
                     </div>
