--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <p> Educated youth up to the age of 16 in studies and creative activities ensuring a fun and safe learning environment both inside and outside the establishment.</p>
                     <p>Prepared and documented periodic progress reports.</p>  
                     <p>Coordinated and provided football training every week.</p>
-                    <p>Prepared and delivered engaging lesson plans</p>
+                    <p>Prepared and delivered engaging lesson plans.</p>
             </div>
 
             <div data-date="October 2016 – February 2017">
