Solutions Architect Associate update

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hi, I'm Shohid. I am an AWS certified cloud practitioner and a graduate of the AWS re/Start programme. I think of myself as an inquisitive person and enjoy learning how things work. 
+                        Hi, I'm Shohid. I am an AWS Certified Solutions Architect and a graduate of the AWS re/Start programme. I think of myself as an inquisitive person and enjoy learning how things work. 
                     </p>
                     <p>
-                         I am currently keen on expanding my skills as a cloud engineer and developing my career by working towards an AWS solutions architect associate certificate and an RHCSA certificate.
+                         I am currently keen on expanding my skills as a cloud engineer and developing my career by deepening my knowledge on serverless technology.
                     </p>
                 </div>
             </div>
@@ -134,7 +134,7 @@
         <!-- End .education-block -->
      
            <div class="education-block">
-             <h3> JIB </h3>
+             <h3> JIB Secondary </h3>
              <span class="education-date">September 2011 - June 2016</span>
              <h4>
                  <p>GCSE Grades:</p>
