--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hi, I'm Shohid. I am an AWS Certified Solutions Architect and a graduate of the AWS re/Start programme. I think of myself as an inquisitive person and enjoy learning how things work. 
+                        Hi, I'm Shohid. I am an AWS Certified Solutions Architect Associate and a graduate of the AWS re/Start programme. I think of myself as an inquisitive person and enjoy learning how things work. 
                     </p>
                     <p>
                          I am currently keen on expanding my skills as a cloud engineer and developing my career by deepening my knowledge on serverless technology.
