--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         Hi, I'm Shohid. I am an AWS Certified Solutions Architect Associate and a graduate of the AWS re/Start programme. I think of myself as an inquisitive person and enjoy learning how things work. 
                     </p>
                     <p>
-                         I am currently keen on expanding my skills as a cloud engineer and developing my career by deepening my knowledge on serverless technology and working towards a RHCSA certificate. 
+                         I am currently keen on expanding my skills as a cloud engineer and developing my career by deepening my knowledge on serverless technology and working towards an RHCSA certificate. 
                     </p>
                 </div>
             </div>
