New repo addition and Certificates link

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             </li>
             <li>
                 <a href="https://github.com/Mshohid/" class="no-scroll">GitHub</a>
+            </li>      
+            <li>
+                <a href="https://www.youracclaim.com/users/mohammed-rahman.7fd7c423" class="no-scroll"> My Certificates</a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/m-shohidur-rahman-8a4a0a149/" class="no-scroll">LinkedIn</a>
@@ -180,6 +183,22 @@
                     </div>
                     <!-- End .project-info -->
                 </div>
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                    <img src="images/bash.png"/>
+                    </div>
+                    <!--End .project-image-->
+                      <div class="project-info">
+                          <h3>Bash Scripts</h3>
+                          <p>
+                            This repository contains Bash scripts I made to improve my Linux abilities.
+                          </p>
+                          <a href="https://github.com/Mshohid/Bash-Scripts">The Repository The Instructions Are In</a>
+                      </div>
+                      <!-- End .project-info -->
+                </div>
+
 
                 <div class="project no-image">
                     <div class="project-info">
