--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hi, I'm Shohid. I am an AWS Certified Solutions Architect Associate and a graduate of the AWS re/Start programme. I think of myself as an inquisitive person and enjoy learning how things work. 
+                        Hi, I'm Shohid. I am a graduate of the AWS re/Start programme. I think of myself as an inquisitive person and enjoy learning how things work.  
                     </p>
                     <p>
-                         I am currently keen on expanding my skills as a cloud engineer and developing my career by deepening my knowledge on serverless technology. I am also working towards an RHCSA and an AWS Certified Developer Associate certificate. 
+                         I am currently keen on expanding my skills as a cloud engineer and developing my career by deepening my knowledge on serverless technology. I am also working towards an RHCSA and an AWS SysOps Administrator certificate. 
                     </p>
                 </div>
             </div>
