New Minecraft Terraform Repo

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hi, I'm Shohid. I am an AWS Certified Solutions Architect Associate and a graduate of the AWS re/Start programme. I think of myself as an inquisitive person and enjoy learning how things work. 
+                        Hi, I'm Shohid, a graduate of the AWS re/Start programme. I think of myself as an inquisitive person and enjoy learning how things work. 
                     </p>
                     <p>
-                         I am currently keen on expanding my skills as a cloud engineer and developing my career by deepening my knowledge on serverless technology. I am also working towards an RHCSA and an AWS Certified Developer Associate certificate. 
+                         I am currently keen on expanding my skills as a cloud engineer and developing my career by deepening my knowledge on serverless technology. I am an AWS Certified Solutions Architect Associate, AWS Certified Developer Associate, and AWS Certified Cloud Practitioner. I am also working towards an RHCSA and an AWS SysOps Admin certificate. 
                     </p>
                 </div>
             </div>
@@ -186,6 +186,21 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
+                    <img src="images/minecraft.jpg"/>
+                    </div>
+                    <!--End .project-image-->
+                      <div class="project-info">
+                          <h3>Terraform Minecraft Server</h3>
+                          <p>
+                             I used Terraform and AWS to build the underlying infrastructure required to create a Minecraft server.
+                          </p>
+                          <a href="https://github.com/Mshohid/Terraform-Minecraft-Server">View Repository </a>
+                      </div>
+                      <!-- End .project-info -->
+                  </div>
+
+                <div class="project shadow-large">
+                    <div class="project-image">
                     <img src="images/bash.png"/>
                     </div>
                     <!--End .project-image-->
@@ -194,7 +209,7 @@
                           <p>
                             This repository contains Bash scripts I made to improve my Linux abilities.
                           </p>
-                          <a href="https://github.com/Mshohid/Bash-Scripts">The Repository The Instructions Are In</a>
+                          <a href="https://github.com/Mshohid/Bash-Scripts">View Repository</a>
                       </div>
                       <!-- End .project-info -->
                 </div>
